--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^6.3.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.31.3",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-slick": "^0.29.0"
